--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Your Sidebar Name"
-  avatar           : "judith.jpg"
+  avatar           : "judith.png"
   bio              : "bio"
   location         : "University of Stuttgart"
   employer         :
