--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ analytics:
 # Site Author
 author:
   name             : "Your Sidebar Name"
-  avatar           : "/images/judith.png"
+  avatar           : judith.png
   bio              : "bio"
   location         : "University of Stuttgart"
   employer         :
