--- a/_config.yml
+++ b/_config.yml
@@ -84,10 +84,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : Judith Tonhauser
   avatar           : judith.png
   bio              : "bio"
-  location         : "University of Stuttgart"
+  location         : University of Stuttgart
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=3tw8OEMAAAAJ&hl=en"
