front page changes

--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ analytics:
 
 # Site Author
 author:
-  name             : Judith Tonhauser
+  name             : 
   avatar           : judith.png
   bio              : "bio"
   location         : University of Stuttgart
