--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name                     : &name "Your Name"
 description              : &description "personal description"
 url                      : judith-tonhauser.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : ""# the subpath of your site, e.g. "/blog"
-repository               : "judith-tonhauser.github.io"
+repository               : 
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -87,11 +87,11 @@ author:
   name             : 
   avatar           : judith.png
   bio              : "bio"
-  location         : University of Stuttgart
+  location         : Department of English Linguistics, University of Stuttgart
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=3tw8OEMAAAAJ&hl=en"
-  email            :
+  email            :  judith.tonhauser@ling.uni-stuttgart.de
   researchgate     :  
   uri              :
   bitbucket        :
