front page changes

--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ analytics:
 author:
   name             : 
   avatar           : judith.png
-  bio              : Department of English Linguistics, University of Stuttgart
+  bio              : 
   location         : 
   employer         :
   pubmed           : 
