--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,23 +1,26 @@
 # main links links
 main:
 
+  - title: "Research"
+    url: /research/
+    
   - title: "CV"
     url: /cv/
-    
+
+        
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+    
+#  - title: "Talks"
+#    url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
+#
+#        
+#  - title: "Blog Posts"
+#    url: /year-archive/
 
-  - title: "Guide / DataProt"
+  - title: "Datenschutzerklärung"
     url: /markdown/
