--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : Prof. Dr. Judith Tonhauser
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name Judith Tonhauser
 description              : &description "personal description"
 url                      :  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : ""# the subpath of your site, e.g. "/blog"
@@ -52,7 +52,7 @@ atom_feed:
 # Build settings
 #remote_theme: minimal-mistakes-jekyll
 remote_theme: mmistakes/minimal-mistakes
-minimal_mistakes_skin: "air" # "default" "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
+minimal_mistakes_skin: aqua #"air" # "default" "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
 
 # SEO Related
 google_site_verification :
