front page changes

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,5 +22,5 @@ main:
 #  - title: "Blog Posts"
 #    url: /year-archive/
 
-  - title: "Datenschutzerklärung"
-    url: /markdown/
+#  - title: "Datenschutzerklärung"
+#    url: /markdown/
