front page changes

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,12 +15,12 @@ main:
 #  - title: "Talks"
 #    url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+#  - title: "Teaching/Advising"
+#    url: /teaching/    
 #
 #        
 #  - title: "Blog Posts"
 #    url: /year-archive/
 
-  - title: "Advising/theses"
-    url: /markdown/
+  - title: "Teaching/Advising"
+    url: /teaching/
