--- a/_config.yml
+++ b/_config.yml
@@ -157,6 +157,7 @@ keep_files:
 encoding: "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
+exclude: [node_modules]
 
 # Conversion
 markdown: kramdown
