updated front page

--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   name             : 
   avatar           : judith.png
   bio              : 
-  location         : 
+  location         : Room 4.049, Keplerstr.17, 70174 Stuttgart
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=3tw8OEMAAAAJ&hl=en"
