--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : Dr. Yuting Li
+title                    : Yuting Li
 title_separator          : "-"
 name                     : &name Yuting Li
 description              : &description "personal description"
